--- a/demo/uikit/horizontalFormTooltip.html
+++ b/demo/uikit/horizontalFormTooltip.html
@@ -112,6 +112,9 @@ $(document).ready(function() {
             validating: 'fa fa-refresh',
             feedback: 'fv-control-feedback'
         },
+        err: {
+            container: 'tooltip'
+        },
         fields: {
             firstName: {
                 validators: {
