--- a/demo/semantic/horizontalForm.html
+++ b/demo/semantic/horizontalForm.html
@@ -17,7 +17,7 @@
 
     <style type="text/css">
     body {
-        margin: 50px 0;
+        padding: 50px 0;
     }
     </style>
 </head>
@@ -119,7 +119,7 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-        // Generate a simple captcha
+    // Generate a simple captcha
     function randomNumber(min, max) {
         return Math.floor(Math.random() * (max - min + 1) + min);
     };
