--- a/demo/uikit/stackedFormTooltip.html
+++ b/demo/uikit/stackedFormTooltip.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FormValidation &rarr; UIKit demo</title>
 
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/uikit/2.12.0/css/uikit.min.css"/>
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/uikit/2.13.1/css/uikit.min.css"/>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
     <link rel="stylesheet" href="../../dist/css/formValidation.css"/>
 
     <script type="text/javascript" src="../../vendor/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/uikit/2.12.0/js/uikit.min.js"></script>
+    <script type="text/javascript" src="http://cdn.jsdelivr.net/uikit/2.13.1/js/uikit.min.js"></script>
 
     <script type="text/javascript" src="../../dist/js/formValidation.js"></script>
     <script type="text/javascript" src="../../dist/js/framework/uikit.js"></script>
