#1272: Update demo due to the event error.x.x -> err.x.x changed

--- a/demo/collapse.html
+++ b/demo/collapse.html
@@ -247,7 +247,7 @@ $(document).ready(function() {
                 }
             }
         }
-    }).on('error.form.fv', function(e) {
+    }).on('err.form.fv', function(e) {
         console.log('error');
 
         // Active the panel element containing the first invalid element
