--- a/demo/dynamic.html
+++ b/demo/dynamic.html
@@ -149,8 +149,8 @@
                     }
                 }
             })
-            .on('error.field.fv', function(e, data) {
-                //console.log('error.field.fv -->', data.element);
+            .on('err.field.fv', function(e, data) {
+                //console.log('err.field.fv -->', data.element);
             })
             .on('success.field.fv', function(e, data) {
                 //console.log('success.field.fv -->', data.element);
