--- a/demo/event3.html
+++ b/demo/event3.html
@@ -85,7 +85,7 @@ $(document).ready(function() {
                 }
             }
         })
-        .on('error.form.fv', function(e) {
+        .on('err.form.fv', function(e) {
             var $form          = $(e.target),
                 formValidation = $form.data('formValidation');
 
