--- a/demo/selector.html
+++ b/demo/selector.html
@@ -205,7 +205,7 @@ $(document).ready(function() {
                 }
             }
         })
-        .on('error.field.fv', function(e, data) {
+        .on('err.field.fv', function(e, data) {
             if (data.field === 'ccNumber') {
                 var $icon = data.element.data('fv.icon');
                 $icon.removeClass().addClass('form-control-feedback fa fa-times');
