--- a/demo/index.html
+++ b/demo/index.html
@@ -119,7 +119,7 @@ $(document).ready(function() {
         },
         fields: {
             firstName: {
-                group: '.col-sm-4',
+                row: '.col-sm-4',
                 validators: {
                     notEmpty: {
                         message: 'The first name is required'
@@ -127,7 +127,7 @@ $(document).ready(function() {
                 }
             },
             lastName: {
-                group: '.col-sm-4',
+                row: '.col-sm-4',
                 validators: {
                     notEmpty: {
                         message: 'The last name is required'
