--- a/demo/mailgun.html
+++ b/demo/mailgun.html
@@ -39,42 +39,66 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-    $('#defaultForm').formValidation({
-        icon: {
-            valid: 'glyphicon glyphicon-ok',
-            invalid: 'glyphicon glyphicon-remove',
-            validating: 'glyphicon glyphicon-refresh'
-        },
-        fields: {
-            'email': {
-                verbose: false,
-                validators: {
-                    notEmpty: {
-                        message: 'The email address is required and can\'t be empty'
-                    },
-                    emailAddress: {
-                        message: 'The input is not a valid email address'
-                    },
-                    stringLength: {
-                        max: 512,
-                        message: 'Cannot exceed 512 characters'
-                    },
-                    remote: {
-                        type: 'GET',
-                        url: 'https://api.mailgun.net/v2/address/validate?callback=?',
-                        crossDomain: true,
-                        name: 'address',
-                        data: {
-                            api_key: 'pubkey-83a6-sl6j2m3daneyobi87b3-ksx3q29'
+    $('#defaultForm')
+        .formValidation({
+            icon: {
+                valid: 'glyphicon glyphicon-ok',
+                invalid: 'glyphicon glyphicon-remove',
+                validating: 'glyphicon glyphicon-refresh'
+            },
+            fields: {
+                email: {
+                    verbose: false,
+                    validators: {
+                        notEmpty: {
+                            message: 'The email address is required and can\'t be empty'
                         },
-                        dataType: 'jsonp',
-                        validKey: 'is_valid',
-                        message: 'The email is not valid'
+                        emailAddress: {
+                            message: 'The input is not a valid email address'
+                        },
+                        stringLength: {
+                            max: 512,
+                            message: 'Cannot exceed 512 characters'
+                        },
+                        remote: {
+                            type: 'GET',
+                            url: 'https://api.mailgun.net/v2/address/validate?callback=?',
+                            crossDomain: true,
+                            name: 'address',
+                            data: {
+                                api_key: 'pubkey-83a6-sl6j2m3daneyobi87b3-ksx3q29'
+                            },
+                            dataType: 'jsonp',
+                            validKey: 'is_valid',
+                            message: 'The email is not valid'
+                        }
                     }
                 }
             }
-        }
-    });
+        })
+        .on('success.validator.fv', function(e, data) {
+            if (data.field === 'email' && data.validator === 'remote') {
+                var response = data.result;  // response is the result returned by MailGun API
+                if (response.did_you_mean) {
+                    // Update the message
+                    data.element                    // The field element
+                        .data('fv.messages')        // The message container
+                        .find('[data-fv-validator="remote"][data-fv-for="email"]')
+                        .html('Did you mean ' + response.did_you_mean + '?')
+                        .show();
+                }
+            }
+        })
+        .on('err.validator.fv', function(e, data) {
+            if (data.field === 'email' && data.validator === 'remote') {
+                // We need to reset the error message
+                data.element                // The field element
+                    .data('fv.messages')    // The message container
+                    .find('[data-fv-validator="remote"][data-fv-for="email"]')
+                    .html('The email is not valid')
+                    .show();
+            }
+        });
 });
 </script>
 </body>
