--- a/test/index.html
+++ b/test/index.html
@@ -15,8 +15,13 @@
     <script type="text/javascript" src="../vendor/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 
+    <!-- Latest code -->
     <script type="text/javascript" src="../dist/js/formValidation.js"></script>
     <script type="text/javascript" src="../dist/js/framework/bootstrap.js"></script>
+
+    <!-- Current release -->
+    <!--<script type="text/javascript" src="http://formvalidation.io/vendor/formvalidation/js/formValidation.min.js"></script>-->
+    <!--<script type="text/javascript" src="http://formvalidation.io/vendor/formvalidation/js/framework/bootstrap.min.js"></script>-->
 
     <!-- Specs -->
     <script type="text/javascript">
