Add Grunt task that runs the jasmine test suites

--- a/test/index.html
+++ b/test/index.html
@@ -24,9 +24,7 @@
     <!--<script type="text/javascript" src="http://formvalidation.io/vendor/formvalidation/js/framework/bootstrap.min.js"></script>-->
 
     <!-- Specs -->
-    <script type="text/javascript">
-    var TestSuite = {};
-    </script>
+    <script type="text/javascript" src="helper.js"></script>
     <script type="text/javascript" src="spec.js"></script>
 </head>
 <body>
